[project]
name = "pytest-watcher"
dynamic = ["version"]
description = "Automatically rerun your tests on file modifications"
authors = [{ name = "Olzhas Arystanov", email = "o.arystanov@gmail.com" }]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/olzhasar/pytest-watcher"
repository = "https://github.com/olzhasar/pytest-watcher"
documentation = "https://pytest-watcher.readthedocs.io/en/latest/"
keywords = ["pytest", "watch", "watcher"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]
include = ["LICENSE"]
requires-python = ">=3.9"
dependencies = [
  "watchdog>=2.0.0",
  "tomli>=2.0.1; python_version < '3.11'",
]

[project.scripts]
pytest-watcher = "pytest_watcher:run"
ptw = "pytest_watcher:run"

[dependency-groups]
dev = [
  "pytest",
  "ruff",
  "mypy",
  "pytest-mock",
  "freezegun",
  "sphinx",
  "coverage[toml]",
  "myst-parser==1.*",
  "sphinx-rtd-theme==1.2.2",
]
  
[tool.hatch.version]
source = "vcs"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.coverage.run]
source = ["pytest_watcher"]
omit = ['pytest_watcher/__main__.py']

[tool.ruff]
line-length = 89
lint.extend-select = ["I"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
exclude = ".venv"
